syntax = "proto3";

package collaboration;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service Collaboration {
    rpc JoinRoom(JoinRoomRequest) returns (stream ConnectionResponse) {
        option (google.api.http) = {
            post: "/collab/{workspaceId}/join"
            body: "*"
        };
    }

    rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {
        option (google.api.http) = {
            get: "/collab/{workspaceId}/room"
        };
    }
}

message JoinRoomRequest {
    int32 workspaceId = 1;
    string userId = 2;
}

message ConnectionResponse {
    CollaborationAction action = 1;
    Any data = 2;
}

message GetRoomRequest {
    int32 workspaceId = 1;
}

message GetRoomResponse {
    repeated string users = 1;
}

enum CollaborationAction {
    UPDATE_CONNECTION = 0;
}

